test/parser/error/err_19_call_not_proc.pl0
program p; 
var x; 
begin 
call x() 
end